--- a/a/ar/arc/arcadelots.com.html
+++ b/a/ar/arc/arcadelots.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the arcadelots.com privacy policy that was archived on 2018-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181207193405id_/http%3A//www.arcadelots.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the arcadelots.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609223437id_/http%3A//www.arcadelots.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -97,7 +97,7 @@ node.parentNode.insertBefore(gads, node);
 
 	<div class="text"><a href="http://www.arcadelots.com/?kas=register">Register</a> for a FREE Account | <a href="http://www.arcadelots.com/?kas=login&amp;old=pages/privacy">Login</a></div>
   <div class="icons" style="padding-left: 27px">
-  <a href="http://www.arcadelots.com/widget/?_ts=1544211244&amp;return_to=http%3A%2F%2Fwww.arcadelots.com%2F%3Fkas%3Dlogin" class="widget_link" title="Login with social providers" rel="nofollow" style="padding-left: 0; padding-top: 0; background: none"><img src="http://www.arcadelots.com/templates/akarc/files/img/social-login.png" style="border: none"></a><br class="clear">
+  <a href="http://www.arcadelots.com/widget/?_ts=1560119677&amp;return_to=http%3A%2F%2Fwww.arcadelots.com%2F%3Fkas%3Dlogin" class="widget_link" title="Login with social providers" rel="nofollow" style="padding-left: 0; padding-top: 0; background: none"><img src="http://www.arcadelots.com/templates/akarc/files/img/social-login.png" style="border: none"></a><br class="clear">
   </div>
 	</div>
 <br class="clear">
@@ -141,7 +141,7 @@ node.parentNode.insertBefore(gads, node);
 <div class="module">
 <div class="title">Most Popular</div>
 <div class="gamelist">
-<a href="http://www.arcadelots.com/shooting-games/play-war-face" title="Play War Face">#1. War Face</a><a href="http://www.arcadelots.com/car-games/play-speed-demon-2" title="Play Speed Demon 2">#2. Speed Demon 2</a><a href="http://www.arcadelots.com/car-games/play-drift-n-burn-3" title="Play Drift N Burn 3">#3. Drift N Burn 3</a><a href="http://www.arcadelots.com/sports/play-sandstorm-racing" title="Play SandStorm Racing">#4. SandStorm Racing</a><a href="http://www.arcadelots.com/bike-games/play-squeezy-rider" title="Play Squeezy Rider">#5. Squeezy Rider</a><a href="http://www.arcadelots.com/car-games/play-sift-heads-3" title="Play Sift Heads 3">#6. Sift Heads 3</a><a href="http://www.arcadelots.com/shooting-games/play-zombies-in-da-house" title="Play Zombies In Da House">#7. Zombies In Da House</a><a href="http://www.arcadelots.com/bike-games/play-trials-2" title="Play Trials 2">#8. Trials 2</a><a href="http://www.arcadelots.com/car-games/play-insane-arranger" title="Play Insane Arranger">#9. Insane Arranger</a><br class="clear">
+<a href="http://www.arcadelots.com/shooting-games/play-war-face" title="Play War Face">#1. War Face</a><a href="http://www.arcadelots.com/car-games/play-speed-demon-2" title="Play Speed Demon 2">#2. Speed Demon 2</a><a href="http://www.arcadelots.com/car-games/play-drift-n-burn-3" title="Play Drift N Burn 3">#3. Drift N Burn 3</a><a href="http://www.arcadelots.com/sports/play-sandstorm-racing" title="Play SandStorm Racing">#4. SandStorm Racing</a><a href="http://www.arcadelots.com/bike-games/play-squeezy-rider" title="Play Squeezy Rider">#5. Squeezy Rider</a><a href="http://www.arcadelots.com/car-games/play-sift-heads-3" title="Play Sift Heads 3">#6. Sift Heads 3</a><a href="http://www.arcadelots.com/shooting-games/play-zombies-in-da-house" title="Play Zombies In Da House">#7. Zombies In Da House</a><a href="http://www.arcadelots.com/car-games/play-insane-arranger" title="Play Insane Arranger">#8. Insane Arranger</a><a href="http://www.arcadelots.com/bike-games/play-trials-2" title="Play Trials 2">#9. Trials 2</a><br class="clear">
 </div>
 </div>
 
@@ -271,10 +271,10 @@ Your use of our site, including any dispute concerning privacy, is  subject to t
 var cpmstar_rnd=Math.round(Math.random()*999999);
 var cpmstar_pid=53074;
 document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-</script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=53074&amp;script=1&amp;rnd=116312"></script>
+</script><script language="Javascript" src="//server.cpmstar.com/view.aspx?poolid=53074&amp;script=1&amp;rnd=78124"></script>
 </div>
 <br>
-Copyright © 2007 - 2018 Car Games | Racing Games. All rights reserved.<br><a href="http://www.arcadelots.com/pages/advertise">Advertise</a> - <a href="http://www.arcadelots.com/pages/contact-us">Contact Us</a> - <a href="http://www.arcadelots.com/pages/free-games-for-your-website">Free Games for your website</a> - <a href="http://www.arcadelots.com/pages/high-scores">High Scores</a> - <a href="http://www.arcadelots.com/pages/my-games">My Games</a> - <a href="http://www.arcadelots.com/pages/popular-features-of-today-s-video-games">Popular Features of Today’s Video Games</a> - <a href="http://www.arcadelots.com/pages/privacy">Privacy</a> - <a href="http://www.arcadelots.com/pages/what-are-the-differences-between-hardcore-midcore-and-casual-games-">What Are The Differences Between Hardcore, Midcore and Casual Games?</a>  - <a href="http://www.arcadelots.com">Car Games</a>
+Copyright © 2007 - 2019 Car Games | Racing Games. All rights reserved.<br><a href="http://www.arcadelots.com/pages/advertise">Advertise</a> - <a href="http://www.arcadelots.com/pages/contact-us">Contact Us</a> - <a href="http://www.arcadelots.com/pages/free-games-for-your-website">Free Games for your website</a> - <a href="http://www.arcadelots.com/pages/high-scores">High Scores</a> - <a href="http://www.arcadelots.com/pages/my-games">My Games</a> - <a href="http://www.arcadelots.com/pages/popular-features-of-today-s-video-games">Popular Features of Today’s Video Games</a> - <a href="http://www.arcadelots.com/pages/privacy">Privacy</a> - <a href="http://www.arcadelots.com/pages/what-are-the-differences-between-hardcore-midcore-and-casual-games-">What Are The Differences Between Hardcore, Midcore and Casual Games?</a>  - <a href="http://www.arcadelots.com">Car Games</a>
 <br>Playing online Car games and car racing games is very simple on Arcadelots. All you have to do is click on the icon of the games that you wish to play, You can also browse the games categories, either racing games or bike games. First be sure that you have the lastest Flash player instealled on your computer. The games should start streaming immediately. Some of our best games like Crazy Mustang, Car Games and Audi 3d Racing are high end racing games. Remember all games are absolutely free to Play.
 <br>
 <br>
