--- a/v/vg/vgc/vgchartz.com.html
+++ b/v/vg/vgc/vgchartz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vgchartz.com privacy policy that was archived on 2018-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181230184349id_/http%3A//www.vgchartz.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vgchartz.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609224428id_/http%3A//www.vgchartz.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -148,18 +148,18 @@
 		<div style="width: 380px; background: #5d5d5d; padding-bottom: 10px; position: relative; font-size: 13px; z-index:20;">
                 	<div style="float: left; margin-top: 0px; margin-left: 20px; width:60px; color: white;">
 						<p><span class="menu_title"><a href="http://www.vgchartz.com/weekly/">Weekly</a></span><br>
-						<a href="http://www.vgchartz.com/weekly/43422/Global/">Global</a><br>
-						<a href="http://www.vgchartz.com/weekly/43429/USA/">USA</a><br>
-						<a href="http://www.vgchartz.com/weekly/43429/Europe/">Europe</a><br>
-						<a href="http://www.vgchartz.com/weekly/43422/Japan/">Japan</a><br>
+						<a href="http://www.vgchartz.com/weekly/43464/Global/">Global</a><br>
+						<a href="http://www.vgchartz.com/weekly/43464/USA/">USA</a><br>
+						<a href="http://www.vgchartz.com/weekly/43464/Europe/">Europe</a><br>
+						<a href="http://www.vgchartz.com/weekly/43464/Japan/">Japan</a><br>
 						</p>
                     </div>
                 	<div style="float: left; margin-top: 0px; margin-left: 15px; width:60px; color: white;">
 						<p><span class="menu_title"><a href="http://www.vgchartz.com/yearly/">Yearly</a></span><br>
-						<a href="http://www.vgchartz.com/yearly/2018/Global/">Global</a><br>
-						<a href="http://www.vgchartz.com/yearly/2018/USA/">USA</a><br>
-						<a href="http://www.vgchartz.com/yearly/2018/Europe/">Europe</a><br>
-						<a href="http://www.vgchartz.com/yearly/2018/Japan/">Japan</a><br>
+						<a href="http://www.vgchartz.com/yearly/2019/Global/">Global</a><br>
+						<a href="http://www.vgchartz.com/yearly/2019/USA/">USA</a><br>
+						<a href="http://www.vgchartz.com/yearly/2019/Europe/">Europe</a><br>
+						<a href="http://www.vgchartz.com/yearly/2019/Japan/">Japan</a><br>
 						</p>
                     </div>
                     <div style="float: left; margin-top: 0px; margin-left: 15px; width:80px; color: white;">
@@ -205,7 +205,7 @@
 	        <li>
             	  <div style="width: 420px; background: #5d5d5d; padding-bottom: 15px; position: relative; font-size: 12px;">
                     <div style="float: left; margin-top: 0px; margin-left: 25px; width:130px; color: white;">
-		      <p><span class="menu_title"><a href="http://www.vgchartz.com/gamedb/">Games</a></span><br>          <a href="http://www.vgchartz.com/game/222024/pokemon-lets-go-pikachu/">Pokemon: Let's... (NS)</a><br>          <a href="http://www.vgchartz.com/game/222025/pokemon-lets-go-eevee/">Pokemon: Let's... (NS)</a><br>          <a href="http://www.vgchartz.com/game/140683/red-dead-redemption-2/">Red Dead... (PS4)</a><br>          <a href="http://www.vgchartz.com/game/221819/spyro-reignited-trilogy/">Spyro Reignited... (PS4)</a><br>          <a href="http://www.vgchartz.com/game/222026/fallout-76/">Fallout 76 (PS4)</a><br>                      <b>
+		      <p><span class="menu_title"><a href="http://www.vgchartz.com/gamedb/">Games</a></span><br>          <a href="http://www.vgchartz.com/game/221289/super-smash-bros-2018/">Super Smash Bros.... (NS)</a><br>          <a href="http://www.vgchartz.com/game/140683/red-dead-redemption-2/">Red Dead... (PS4)</a><br>          <a href="http://www.vgchartz.com/game/221291/call-of-duty-black-ops-iiii/">Call of Duty:... (PS4)</a><br>          <a href="http://www.vgchartz.com/game/153114/mario-kart-8-deluxe/">Mario Kart 8... (NS)</a><br>          <a href="http://www.vgchartz.com/game/120133/spider-man-ps4/">Spider-Man (PS4) (PS4)</a><br>                      <b>
                                   <a href="http://gamrconnect.vgchartz.com/gamedb/">All Games &gt;&gt;</a>
                                 </b>
 	                      </p>  
@@ -417,7 +417,7 @@
     <div id="footer_bar_corporate">
 	<img src="https://www.vgchartz.com/assets/images/footer_images/VGChartz-small-footer-logo.png" alt="VGChartz" style="float: left; padding: 12px 10px 0 10px;">
 	<p><a href="http://www.vgchartz.com/about.php">About Us</a> | <a href="http://www.vgchartz.com/terms-of-use.php">Terms of Use</a> | <a href="http://www.vgchartz.com/privacy-policy.php">Privacy Policy</a> | <a href="http://www.vgchartz.com/advertise.php">Advertise</a> | <a href="http://www.vgchartz.com/staff.php">Staff</a> | <a href="mailto:contact@vgchartz.com">Contact</a><br>
-	© 2006-2018 <a href="http://www.vgchartz.com">VGChartz Ltd</a>. All rights reserved. US</p>
+	© 2006-2019 <a href="http://www.vgchartz.com">VGChartz Ltd</a>. All rights reserved. US</p>
 	<div class="addClear"></div>
     </div><!-- end footer_bar_3 -->
 
