sweetdiscreet.com (archived on 2019-06-10)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "personals",
  "char_count": 22740,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.48,
  "homepage_snapshot_redirected_domain": "sweetdiscreet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190122211629id_/http://www.sweetdiscreet.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190122211629id_/http%3A//sweetdiscreet.com",
  "interval": "2019_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "sweetdiscreet.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190610013307id_/http%3A//www.sweetdiscreet.com/main/privacy_policy",
  "policy_title": "Sweet Discreet, Encounters, Affairs | Married Women, Cheating Wives",
  "policy_url": "sweetdiscreet.com/main/privacy_policy",
  "sha1": "24d9924b7b5468d4a651487264ffb35618bd8e41",
  "simhash": 5538145743553016280,
  "simhash_updated": false,
  "site_hostname": "sweetdiscreet.com",
  "site_url": "http://sweetdiscreet.com",
  "smog": 16.4,
  "strict_updated": false,
  "timestamp": "20190610013307",
  "word_count": 3622,
  "year": 2019
}

--- a/s/sw/swe/sweetdiscreet.com.html
+++ b/s/sw/swe/sweetdiscreet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sweetdiscreet.com privacy policy that was archived on 2018-08-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180802190137id_/http%3A//www.sweetdiscreet.com/main/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sweetdiscreet.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610013307id_/http%3A//www.sweetdiscreet.com/main/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><!--<![endif]--><head>
   <meta charset="utf-8">
@@ -16,7 +16,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="http://cdn2.static.cdn-sweetdiscreet.com/images/desktop/touch-icon-iphone-6-plus.png">
 
   <title>Sweet Discreet, Encounters, Affairs | Married Women, Cheating Wives</title>
-  <link href="http://cdn2.static.cdn-sweetdiscreet.com/css/desktop/screen.71141367.css" rel="stylesheet" type="text/css">  <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://cdn2.static.cdn-sweetdiscreet.com/js/desktop/lib/modernizr.custom.2728112180.js"></script>  
+  <link href="http://cdn2.static.cdn-sweetdiscreet.com/css/desktop/screen.4186463684.css" rel="stylesheet" type="text/css">  <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript"> var exit_iframe = 0; </script>
+  <script src="http://cdn2.static.cdn-sweetdiscreet.com/js/desktop/iframepopout/exit_iframe.378390424.js"></script>  <script src="http://cdn2.static.cdn-sweetdiscreet.com/js/desktop/lib/modernizr.custom.2728112180.js"></script>  
 <script>
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -297,7 +298,7 @@
       <li><a href="http://www.sweetdiscreet.com/contact">Contact</a></li>
               <li><a href="http://www.sweetdiscreet.com/contact/abuse">Report Abuse</a></li>
             <li><a href="http://www.sweetdiscreet.com/main/usc2257?link_id=76">2257 Exemption Notice</a></li>
-      <li class="footer-copyright">© Copyright Sweet Discreet 2018</li>
+      <li class="footer-copyright">© Copyright Sweet Discreet 2019</li>
     </ul>
   </nav>
 </footer>
@@ -311,7 +312,7 @@
 (function() {
   function loadTMX() {
     var frame = document.createElement('iframe');
-    frame.src    = 'https://h.online-metrix.net/tags?org_id=cd7qw1ng&session_id=8lhjffq4jf8vtm8jeuh1dbp4g4';
+    frame.src    = 'https://h.online-metrix.net/tags?org_id=cd7qw1ng&session_id=6ijhosc0uomdo96v3j556822c1';
     frame.height = 100;
     frame.width  = 100;
     frame.style.cssText = 'color:rgb(0,0,0); float:left; position:absolute; left:-9999em; border:0px';
@@ -327,9 +328,18 @@
 </script>
 
 <noscript>
-  <iframe style="color:rgb(0,0,0); float:left; position:absolute; left:-9999em; border:0px" src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=8lhjffq4jf8vtm8jeuh1dbp4g4" height="100" width="100"></iframe>
+  <iframe style="color:rgb(0,0,0); float:left; position:absolute; left:-9999em; border:0px" src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=6ijhosc0uomdo96v3j556822c1" height="100" width="100"></iframe>
 </noscript>
 
-      <script src="http://cdn2.static.cdn-sweetdiscreet.com/js/desktop/core.1628553440.js"></script>  
+      <script src="http://cdn2.static.cdn-sweetdiscreet.com/js/desktop/core.1628553440.js"></script>        <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function() {
+            OneSignal.init({
+                appId: "c467d5c8-943d-4f8f-8efa-f412ba1ab08d",
+            });
+        });
+    </script>
 
-<iframe src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=8lhjffq4jf8vtm8jeuh1dbp4g4" height="100" width="100" style="color: rgb(0, 0, 0); float: left; position: absolute; left: -9999em; border: 0px;"></iframe></body></html>
+
+<iframe src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=6ijhosc0uomdo96v3j556822c1" height="100" width="100" style="color: rgb(0, 0, 0); float: left; position: absolute; left: -9999em; border: 0px;"></iframe></body></html>
