--- a/t/tw/twi/twinspires.com.html
+++ b/t/tw/twi/twinspires.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the twinspires.com privacy policy that was archived on 2018-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181224014843id_/http%3A//churchilldownsincorporated.com/our_company/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the twinspires.com privacy policy that was archived on 2019-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190610022029id_/http%3A//churchilldownsincorporated.com/our_company/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -13,23 +13,23 @@
 <meta name="revisit-after" content="1 day">
 <meta name="geo.position" content="0;0">
 <meta name="icbm" content="0,0">
-    <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/ctools/css/ctools.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/date/date.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/tagadelic/tagadelic.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/views_slideshow/contrib/views_slideshow_singleframe/views_slideshow.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/views/css/views.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_base/css/fonts.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_base/css/style.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_base/css/dblog.css?x">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_theme/css/cdi-theme.css?x">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/all/themes/cdi_base/css/print.css?x">
+    <link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/ctools/css/ctools.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/date/date.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/tagadelic/tagadelic.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/views_slideshow/contrib/views_slideshow_singleframe/views_slideshow.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/views/css/views.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_base/css/fonts.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_base/css/style.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_base/css/dblog.css?e">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_theme/css/cdi-theme.css?e">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/all/themes/cdi_base/css/print.css?e">
     <!--[if IE 7]>
       <link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_base/css/ie7-fixes.css" />
 <link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_theme/css/ie7-fixes.css" />
@@ -40,7 +40,7 @@
     <!--[if IE 9]>
       <link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/cdi_theme/css/ie9-fixes.css" />
     <![endif]-->
-    <script type="text/javascript" async="" src="//siteimproveanalytics.com/js/siteanalyze_6009895.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/sites/default/files/js/js_5685d7c58ba2cfc024095c9564a6ae26.js"></script>
+    <script type="text/javascript" async="" src="//siteimproveanalytics.com/js/siteanalyze_6009895.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/sites/default/files/js/js_2b0b22dfdde257e2becd8cc7177b7070.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutbound": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip" }, "CToolsUrlIsAjaxTrusted": { "/our_company/privacy_policy.html": true } });
@@ -64,7 +64,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 <div id="search" class="container-inline">
     <input class="search-input form-text" type="text" maxlength="128" name="search_theme_form" id="edit-search_theme_form" size="15" value="" title="Enter the terms you wish to search for">
   <input class="search_submit" type="submit" name="op" value="Search">
-  <input type="hidden" name="form_build_id" id="form-UwkPYgkeDH_o2CEVMxsWAuyzSiG9lwapyGi2VQq6cXQ" value="form-UwkPYgkeDH_o2CEVMxsWAuyzSiG9lwapyGi2VQq6cXQ">
+  <input type="hidden" name="form_build_id" id="form-7R3P19hh9YWD39USNcenB1M_grnQQxLuAKW7mw6o0Xw" value="form-7R3P19hh9YWD39USNcenB1M_grnQQxLuAKW7mw6o0Xw">
 <input type="hidden" name="form_id" id="edit-search-theme-form" value="search_theme_form">
   </div>
 
@@ -103,7 +103,9 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 <li class="leaf"><a href="/properties/fair_grounds_race_course_slots_and_finish_line_otb_and_casino" title="Fair Grounds Race Course &amp; Slots and Finish Line OTB and Casino">Fair Grounds Race Course &amp; Slots</a></li>
 <li class="leaf"><a href="/properties/harlows_casino_resort_spa" title="Harlow's Casino Resort &amp; Hotel">Harlow's Casino Resort and Spa</a></li>
 <li class="leaf"><a href="/properties/miami_valley_gaming" title="Miami Valley Gaming">Miami Valley Gaming</a></li>
+<li class="leaf"><a href="/properties/ocean_downs_1" title="Ocean Downs Casino">Ocean Downs</a></li>
 <li class="leaf"><a href="/properties/oxford_casino" title="Oxford Casino">Oxford Casino Hotel</a></li>
+<li class="leaf"><a href="/properties/presque_isle_downs_casino" title="Presque Isle Downs &amp; Casino">Presque Isle Downs &amp; Casino</a></li>
 <li class="leaf"><a href="/properties/riverwalk_casino_hotel" title="Riverwalk Casino Hotel">Riverwalk Casino Hotel</a></li>
 <li class="leaf"><a href="/properties/twinspires" title="Twinspires">Twinspires.com</a></li>
 <li class="leaf last"><a href="/properties/united_tote" title="United Tote">United Tote</a></li>
@@ -276,7 +278,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 </ul>      </div>
     </div>
       </div>
-</div><!-- /block-wrapper -->            Copyright © 2018 Churchill Downs Incorporated. All Rights Reserved. | Churchill Downs, Kentucky Derby, Kentucky Oaks, the "twin spires design" and Churchill Downs Incorporated-related trademarks are registered trademarks of Churchill Downs Incorporated.          </div><!-- footer-bottom -->
+</div><!-- /block-wrapper -->            Copyright © 2019 Churchill Downs Incorporated. All Rights Reserved. | Churchill Downs, Kentucky Derby, Kentucky Oaks, the "twin spires design" and Churchill Downs Incorporated-related trademarks are registered trademarks of Churchill Downs Incorporated.          </div><!-- footer-bottom -->
          
       </div><!-- /footer-wrapper inner -->
     </div><!-- /footer-wrapper -->
